--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Emergency Recorder</string>
+
+    <string name="btn_delete">Delete</string>
+    <string name="btn_cancel">Cancel</string>
+    <string name="btn_save">Save</string>
 </resources>
