--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="btn_delete">Delete</string>
     <string name="btn_cancel">Cancel</string>
     <string name="btn_save">Save</string>
+    <string name="btn_ok">Ok</string>
 
 </resources>
