--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="btn_delete">Delete</string>
     <string name="btn_cancel">Cancel</string>
     <string name="btn_save">Save</string>
-    <string name="btn_ok">Ok</string>
+    <string name="btn_ok">OK</string>
+    <string name="btn_export">Export</string>
 
     <string name="url_police_rewired">https://policerewired.org</string>
 
