new home screen, new welcome screens (provisional)

--- a/EmergencyRecorder/recorder.app/src/main/res/values/strings.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="url_police_rewired">https://policerewired.org</string>
 
+    <string name="text_please_wait">Please wait…</string>
+
 </resources>
